--- a/package.json
+++ b/package.json
@@ -41,13 +41,15 @@
     "react-router-dom": "^6.26.1",
     "simplebar-react": "^3.2.6",
     "stylis": "^4.3.4",
-    "stylis-plugin-rtl": "^2.1.1"
+    "stylis-plugin-rtl": "^2.1.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@types/stylis": "^4.2.6",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
