--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.8",
+    "@tanstack/react-query": "^5.59.15",
+    "@tanstack/react-query-devtools": "^5.59.15",
     "apexcharts": "^3.52.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
