--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "history": "^5.3.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
