--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "redux-persist": "^6.0.0",
     "simplebar-react": "^3.2.6",
     "stylis": "^4.3.4",
     "stylis-plugin-rtl": "^2.1.1",
@@ -51,6 +52,7 @@
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@types/redux-persist": "^4.3.1",
     "@types/stylis": "^4.2.6",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
